tests/positive/pr221_for_of_discriminated_helper.safe
-- Test: pr221_for_of_discriminated_helper
-- Description: Heap-backed discriminated record for-of helpers preserve copied discriminants.
-- Expected: ACCEPT

package pr221_for_of_discriminated_helper

   type payload (active : boolean = true) is record
      text : string;

   function count_active returns integer
      seed : payload = (active = true, text = "Ada");
      var values : list of payload = [seed];

      for item of values
         if item.active
            text : string = item.text;
            if text == "Ada"
               return 1;

      return 0;

   result : integer = count_active ();
